# url-shorter

./: .env  .env.example  Dockerfile  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
src/shorter/: config.py  crud.py  db.py  main.py  models.py  schemas.py  services.py  utils.py
