[project]
name = "url-shorter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4
preview = true

[tool.ruff.lint]
select = ["E", "F", "W", "UP", "I", "B", "C90"]
ignore = ["E203"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["url_shortener"]